# DiffusionHandles

./: .gitignore  README.md  environment_diffusion_handles.yml  id_paths.json  karran_original_instructions.txt  pyproject.toml
diffhandles/: __init__.py  batch_edit_generation.py  depth_edit_zoe.py  depth_estimator.py  depth_transform.py  diffuser.py  diffusion_handles.py  guided_diffuser.py  guided_stable_diffuser.py  image_editor.py  inpainter.py  lama_inpainter.py  losses.py  mesh.py  mesh_io.py  mesh_io_obj.py  null_inversion.py  null_inverter.py  pytorch3d_renderer.py  renderer.py  stable_diffuser.py  stable_null_inverter.py  utils.py  zoe_depth_estimatation.py  zoe_depth_estimator.py
diffhandles/config/: default.yaml
diffhandles/model/: attention_processor.py  embeddings.py  unet_2d_blocks.py  unet_2d_condition.py
diffhandles/model_orig/: transformer_2d.py
diffhandles/my_model/: attention.py
old_code/: batch_edit_gen_utils.py  batch_edit_generation.py  depthTransform.ipynb  depth_edit_zoe.py  depth_transform.py  tuls_utils.py
test/: depth_estimator.py  estimate_depth.py  estimate_foreground.py  generate_results_webpage.py  lama_inpainter.py  remove_foreground.py  results_template.html  test.py  test_depth_estimation.py  test_diffusion_handles.py  test_foreground_removal.py  test_foreground_selection.py  test_image_editor.py  transform_test_temp.py  transform_visualizer.ipynb  utils.py  zoe_depth_estimator.py
test/config/: bg_erosion.yaml  bg_erosion_10_local_avg.yaml  bg_erosion_15_local_avg.yaml  bg_erosion_local_avg.yaml  ex1.yaml  ex2.yaml  ex3.yaml  ex4.yaml  ex4_test.yaml  full_debug.yaml  linear_schedule.yaml  local_avg_bg_loss.yaml  mesh_depth_transform.yaml  no_depth.yaml  quadratic_schedule.yaml  quadratic_schedule_local_avg.yaml
test/data/: test_set.json
test/data/photogen/: photogen.json  sunflower.json
test/data/photogen/banana_fruits/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/car/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/car_2/: bg_depth.exr  depth.exr  transforms.json
test/data/photogen/car_3/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/chair/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/chair_2/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/chrome_headlight/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/cube_toy/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/dice/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/fighter_jet/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/guitar/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/milk_carton/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/plane/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/potted_plant/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/potted_plant_2/: bg_depth.exr  depth.exr  prompt.txt  transforms.json
test/data/photogen/red_block/: bg_depth.exr  depth.exr  prompt.txt
test/data/photogen/shoe/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/photogen/sunflower/: bg_depth.exr  prompt.txt
test/data/photogen/toaster/: bg_depth.exr  depth.exr  transforms.json
test/data/photogen/wine_glass/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
test/data/sunflower/: bg_depth.exr  fg_prompt.txt
test/webpage_templates/: denoising_steps_template.html  results_template.html
webapp/: diffhandles_client.py  diffhandles_pipeline2_webapp.py  diffhandles_pipeline_client.py  diffhandles_pipeline_webapp.py  diffhandles_webapp.py  gradio_job_manager.py  lama_inpainter_client.py  lama_inpainter_webapp.py  langsam_segmenter_client.py  langsam_segmenter_webapp.py  object_peeling_client.py  object_peeling_webapp.py  run_in_tmux_window.sh  start_webapps_in_tmux.sh  stop_webapps.sh  utils.py  zoe_depth_client.py  zoe_depth_webapp.py
webapp/data/car_2/: config.yaml  prompt.txt
webapp/data/cube_toy/: fg_prompt.txt
webapp/data/red_block/: fg_prompt.txt  transforms.json
webapp/data/sunflower/: depth.exr  transforms.json
webapp/data/toaster/: config.yaml  prompt.txt  transforms.json
webapp/data/toy_cubes/: bg_depth.exr  depth.exr  fg_prompt.txt  prompt.txt  transforms.json
webapp/example_clients/: depth_estimator_client.py  diffhandles_client.py  diffhandles_pipeline_client.py  foreground_remover_client.py  foreground_selector_client.py  text2img_client.py
webapp/webapps/: depth_estimator_webapp.py  diffhandles_pipeline_webapp.py  diffhandles_webapp.py  foreground_remover_webapp.py  foreground_selector_webapp.py  gradio_webapp.py  lama_inpainter_webapp.py  langsam_segmenter_webapp.py  object_peeling_webapp.py  stablediff_text2img_webapp.py  text2img_webapp.py  utils.py  zoe_depth_webapp.py
