[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diffhandles"
version = "0.1.0"
description = "DiffusionHandles: Enabling 3D Edits for Diffusion Models by Lifting Activations to 3D"
documentation = "https://diffusionhandles.github.io/"
repository = "https://github.com/paulguerrero/diffusionhandles.git"
authors = [
    "Karran Pandey",
    "Paul Guerrero",
    "Matheus Gadelha",
    "Yannick Hold-Geoffroy",
    "Niloy Mitra",
    "Karan Singh",
    ]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = ">=2.0"
torchvision = "*"
trimesh = "*"
scipy = "*"
timm = "0.6.12" # required by ZoeDepth (the pretrained weights that are loaded from torch hub are for this version)
diffusers = ">=0.23"
transformers = ">=4.33"
accelerate = "*"
zoedepth = { git = "https://github.com/paulguerrero/ZoeDepth.git" }
saicinpainting = { git = "https://github.com/paulguerrero/lama.git" }
lang-sam = { git = "https://github.com/paulguerrero/lang-sam" }
